--- a/examples/pipelines/dgcluster/config.yaml
+++ b/examples/pipelines/dgcluster/config.yaml
@@ -1,51 +1,11 @@
-ACM:
+WIKI:
     device: cuda
     logger:
-        name: ACM
+        name: WIKI
         mode: both
-        dir: ./log/ACM/
+        dir: ./log/WIKI/
     dataset:
-        dir: ../data/ACM/
-        augmentation:
-            add_self_loops: true
-            drop_edge: 0.0
-            drop_feature: 0.0
-            add_edge: 0.0
-            add_noise: 0.0
-    model:
-        gnn_type: gcn
-        dims: [ 256, 16 ]
-        act: relu
-        act_last: false
-    train:
-        seed: -1
-        rounds: 1
-        max_epoch: 30
-        lr: 1e-3
-    visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
-        dir: ./visualization/ACM/
-        when: end
-    evaluate:
-        each: false
-        acc: true
-        nmi: true
-        ari: true
-        f1: true
-        hom: true
-        com: true
-        pur: true
-CITE:
-    device: cuda
-    logger:
-        name: CITE
-        mode: both
-        dir: ./log/CITE/
-    dataset:
-        dir: ../data/CITE/
+        dir: ../data/WIKI/
         augmentation:
             add_self_loops: false
             drop_edge: 0.0
@@ -54,23 +14,23 @@ CITE:
             add_noise: 0.0
     model:
         gnn_type: gcn
-        dims: [ 256, 128, 64 ]
+        dims: [ 256, 128, 64]
     train:
         seed: -1
-        rounds: 1
+        rounds: 10
         max_epoch: 300
         lr: 1e-3
         lam: 0.2
         alp: 0.0
     visualize:
         tsne: true
-        umap: false
-        heatmap: false
+        umap: true
+        heatmap: true
         loss: true
-        dir: ./visualization/CORA/
+        dir: ./visualization/WIKI/
         when: end
     evaluate:
-        each: true
+        each: false
         acc: true
         nmi: true
         ari: true
@@ -99,8 +59,92 @@ CORA:
         dims: [ 256, 128, 64]
     train:
         seed: -1
-        rounds: 1
-        max_epoch: 100
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CORA/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ACM:
+    device: cuda
+    logger:
+        name: ACM
+        mode: both
+        dir: ./log/ACM/
+    dataset:
+        dir: ../data/ACM/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ACM/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+CITE:
+    device: cuda
+    logger:
+        name: CITE
+        mode: both
+        dir: ./log/CITE/
+    dataset:
+        dir: ../data/CITE/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64 ]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
         lr: 1e-3
         lam: 0.2
         alp: 0.0
@@ -109,7 +153,7 @@ CORA:
         umap: false
         heatmap: false
         loss: true
-        dir: ./visualization/CORA/
+        dir: ./visualization/ACM/
         when: end
     evaluate:
         each: true
@@ -131,25 +175,25 @@ DBLP:
     dataset:
         dir: ../data/DBLP/
         augmentation:
-            add_self_loops: true
+            add_self_loops: false
             drop_edge: 0.0
             drop_feature: 0.0
             add_edge: 0.0
             add_noise: 0.0
     model:
         gnn_type: gcn
-        dims: [ 256, 16 ]
-        act: relu
-        act_last: false
+        dims: [ 256, 128, 64]
     train:
-        seed: 0
+        seed: -1
         rounds: 10
-        max_epoch: 30
+        max_epoch: 300
         lr: 1e-3
+        lam: 0.2
+        alp: 0.0
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
+        tsne: true
+        umap: true
+        heatmap: true
         loss: true
         dir: ./visualization/DBLP/
         when: end
@@ -162,3 +206,299 @@ DBLP:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
+PUBMED:
+    device: cuda
+    logger:
+        name: PUBMED
+        mode: both
+        dir: ./log/PUBMED/
+    dataset:
+        dir: ../data/PUBMED/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/PUBMED/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ARXIV:
+    device: cuda
+    logger:
+        name: ARXIV
+        mode: both
+        dir: ./log/ARXIV/
+    dataset:
+        dir: ../data/ARXIV/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ARXIV/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+BLOG:
+    device: cuda
+    logger:
+        name: BLOG
+        mode: both
+        dir: ./log/BLOG/
+    dataset:
+        dir: ../data/BLOG/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/BLOG/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+FLICKR:
+    device: cuda
+    logger:
+        name: FLICKR
+        mode: both
+        dir: ./log/FLICKR/
+    dataset:
+        dir: ../data/FLICKR/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/FLICKR/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ROMAN:
+    device: cuda
+    logger:
+        name: ROMAN
+        mode: both
+        dir: ./log/ROMAN/
+    dataset:
+        dir: ../data/ROMAN/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ROMAN/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+USPS_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+HHAR_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        gnn_type: gcn
+        dims: [ 256, 128, 64]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 300
+        lr: 1e-3
+        lam: 0.2
+        alp: 0.0
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
