--- a/examples/pipelines/ccgc/config.yaml
+++ b/examples/pipelines/ccgc/config.yaml
@@ -1,11 +1,11 @@
-ACM:
+WIKI:
     device: cuda
     logger:
-        name: ACM
+        name: WIKI
         mode: both
-        dir: ./log/ACM/
+        dir: ./log/WIKI/
     dataset:
-        dir: ../data/ACM/
+        dir: ../data/WIKI/
         augmentation:
             add_self_loops: true
             drop_edge: 0.0
@@ -16,7 +16,7 @@ ACM:
         dims: [500]
     train:
         seed: -1
-        rounds: 1
+        rounds: 10
         max_epoch: 400
         lr: 1e-4
         tau: 0.5
@@ -25,10 +25,10 @@ ACM:
         t: 4
     visualize:
         tsne: true
-        umap: false
-        heatmap: false
+        umap: true
+        heatmap: true
         loss: true
-        dir: ./visualization/ACM/
+        dir: ./visualization/WIKI/
         when: end
     evaluate:
         each: false
@@ -39,53 +39,8 @@ ACM:
         hom: true
         com: true
         pur: true
-CITE:
-    device: cuda
-    logger:
-        name: CITE
-        mode: both
-        dir: ./log/CITE/
-    dataset:
-        dir: ../data/CITE/
-        augmentation:
-            add_self_loops: true
-            drop_edge: 0.0
-            drop_feature: 0.0
-            add_edge: 0.0
-            add_noise: 0.0
-    model:
-        gnn_type: gcn
-        dims: [ 256, 16 ]
-        act: relu
-        act_last: false
-    train:
-        pretrain:
-            seed: -1
-            rounds: 1
-            dir: ./pretrain/CITE/
-            max_epoch: 50
-            lr: 1e-3
-            weight_decay: 5e-3
-        seed: -1
-        rounds: 10
-        max_epoch: 50
-        lr: 1e-3
-        weight_decay: 5e-3
-        alpha: 10
-    visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
-    evaluate:
-        each: false
-        acc: true
-        nmi: true
-        ari: true
-        f1: true
-        hom: true
-        com: true
-        pur: true
+        sc: true
+        gre: true
 CORA:
     device: cuda
     logger:
@@ -113,10 +68,96 @@ CORA:
         t: 4
     visualize:
         tsne: true
-        umap: false
-        heatmap: false
+        umap: true
+        heatmap: true
         loss: true
         dir: ./visualization/CORA/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ACM:
+    device: cuda
+    logger:
+        name: ACM
+        mode: both
+        dir: ./log/ACM/
+    dataset:
+        dir: ../data/ACM/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CORA/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+CITE:
+    device: cuda
+    logger:
+        name: CITE
+        mode: both
+        dir: ./log/CITE/
+    dataset:
+        dir: ../data/CITE/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CITE/
         when: end
     evaluate:
         each: false
@@ -144,29 +185,23 @@ DBLP:
             add_edge: 0.0
             add_noise: 0.0
     model:
-        gnn_type: gcn
-        dims: [ 256, 16 ]
-        act: relu
-        act_last: false
+        dims: [500]
     train:
-        pretrain:
-            seed: -1
-            rounds: 1
-            dir: ./pretrain/DBLP/
-            max_epoch: 50
-            lr: 1e-3
-            weight_decay: 5e-3
         seed: -1
         rounds: 10
-        max_epoch: 50
-        lr: 1e-3
-        weight_decay: 5e-3
-        alpha: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/DBLP/
+        when: end
     evaluate:
         each: false
         acc: true
@@ -176,15 +211,18 @@ DBLP:
         hom: true
         com: true
         pur: true
-UAT:
+        sc: true
+        gre: true
+PUBMED:
     device: cuda
     logger:
-        name: UAT
+        name: PUBMED
         mode: both
-        dir: ./log/UAT/
+        dir: ./log/PUBMED/
     dataset:
-        dir: ../data/UAT/
+        dir: ../data/PUBMED/
         augmentation:
+            add_self_loops: true
             drop_edge: 0.0
             drop_feature: 0.0
             add_edge: 0.0
@@ -193,22 +231,280 @@ UAT:
         dims: [500]
     train:
         seed: -1
-        rounds: 1
+        rounds: 10
         max_epoch: 400
-        lr: 1e-2
-        tau: 0.6
+        lr: 1e-4
+        tau: 0.5
         alpha: 0.5
         threshold: 0.5
-        t: 6
+        t: 4
     visualize:
         tsne: true
-        umap: false
-        heatmap: false
+        umap: true
+        heatmap: true
         loss: true
-        dir: ./visualization/UAT/
+        dir: ./visualization/PUBMED/
         when: end
     evaluate:
-        each: true
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ARXIV:
+    device: cuda
+    logger:
+        name: ARXIV
+        mode: both
+        dir: ./log/ARXIV/
+    dataset:
+        dir: ../data/ARXIV/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ARXIV/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+BLOG:
+    device: cuda
+    logger:
+        name: BLOG
+        mode: both
+        dir: ./log/BLOG/
+    dataset:
+        dir: ../data/BLOG/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/BLOG/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+FLICKR:
+    device: cuda
+    logger:
+        name: FLICKR
+        mode: both
+        dir: ./log/FLICKR/
+    dataset:
+        dir: ../data/FLICKR/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/FLICKR/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ROMAN:
+    device: cuda
+    logger:
+        name: ROMAN
+        mode: both
+        dir: ./log/ROMAN/
+    dataset:
+        dir: ../data/ROMAN/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ROMAN/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+USPS_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+HHAR_3:
+    device: cuda
+    logger:
+        name: HHAR_3
+        mode: both
+        dir: ./log/HHAR_3/
+    dataset:
+        dir: ../data/HHAR/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+    model:
+        dims: [500]
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 1e-4
+        tau: 0.5
+        alpha: 0.5
+        threshold: 0.5
+        t: 4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/HHAR_3/
+        when: end
+    evaluate:
+        each: false
         acc: true
         nmi: true
         ari: true
