--- a/examples/pipelines/daegc/config.yaml
+++ b/examples/pipelines/daegc/config.yaml
@@ -1,3 +1,103 @@
+WIKI:
+    device: cuda
+    logger:
+        name: WIKI
+        mode: both
+        dir: ./log/WIKI/
+    dataset:
+        dir: ../data/WIKI/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/WIKI/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/WIKI/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+CORA:
+    device: cuda
+    logger:
+        name: CORA
+        mode: both
+        dir: ./log/CORA/
+    dataset:
+        dir: ../data/CORA/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/CORA/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CORA/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
 ACM:
     device: cuda
     logger:
@@ -31,14 +131,14 @@ ACM:
         weight_decay: 5e-3
         gamma: 10
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
         dir: ./visualization/ACM/
         when: end
     evaluate:
-        each: true
+        each: false
         acc: true
         nmi: true
         ari: true
@@ -46,6 +146,8 @@ ACM:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
 CITE:
     device: cuda
     logger:
@@ -70,19 +172,19 @@ CITE:
             rounds: 1
             dir: ./pretrain/CITE/
             max_epoch: 30
-            lr: 5e-3
+            lr: 1e-3
             weight_decay: 5e-3
         seed: -1
         rounds: 10
         max_epoch: 100
-        lr: 1e-4
+        lr: 1e-3
         weight_decay: 5e-3
         gamma: 10
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: false
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
         dir: ./visualization/CITE/
         when: end
     evaluate:
@@ -94,54 +196,8 @@ CITE:
         hom: true
         com: true
         pur: true
-CORA:
-    device: cuda
-    logger:
-        name: CORA
-        mode: both
-        dir: ./log/CORA/
-    dataset:
-        dir: ../data/CORA/
-        augmentation:
-            add_self_loops: true
-            drop_edge: 0.0
-            drop_feature: 0.0
-            add_edge: 0.0
-            add_noise: 0.0
-            dense_adj: true
-            t: 2
-    model:
-        dims: [ 256, 16 ]
-    train:
-        pretrain:
-            seed: 0
-            rounds: 1
-            dir: ./pretrain/CORA/
-            max_epoch: 30
-            lr: 5e-3
-            weight_decay: 5e-3
-        seed: 0
-        rounds: 1
-        max_epoch: 100
-        lr: 1e-4
-        weight_decay: 5e-3
-        gamma: 10
-    visualize:
-        tsne: false
-        umap: false
-        heatmap: false
-        loss: true
-        dir: ./visualization/CORA/
-        when: end
-    evaluate:
-        each: true
-        acc: true
-        nmi: true
-        ari: true
-        f1: true
-        hom: true
-        com: true
-        pur: true
+        sc: true
+        gre: true
 DBLP:
     device: cuda
     logger:
@@ -162,27 +218,27 @@ DBLP:
         dims: [ 256, 16 ]
     train:
         pretrain:
-            seed: 0
+            seed: -1
             rounds: 1
             dir: ./pretrain/DBLP/
             max_epoch: 30
-            lr: 5e-3
+            lr: 1e-3
             weight_decay: 5e-3
-        seed: 0
-        rounds: 1
+        seed: -1
+        rounds: 10
         max_epoch: 100
-        lr: 1e-4
+        lr: 1e-3
         weight_decay: 5e-3
         gamma: 10
     visualize:
-        tsne: false
-        umap: false
-        heatmap: false
+        tsne: true
+        umap: true
+        heatmap: true
         loss: true
         dir: ./visualization/DBLP/
         when: end
     evaluate:
-        each: true
+        each: false
         acc: true
         nmi: true
         ari: true
@@ -190,3 +246,355 @@ DBLP:
         hom: true
         com: true
         pur: true
+        sc: true
+        gre: true
+PUBMED:
+    device: cuda
+    logger:
+        name: PUBMED
+        mode: both
+        dir: ./log/PUBMED/
+    dataset:
+        dir: ../data/PUBMED/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/PUBMED/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/PUBMED/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ARXIV:
+    device: cuda
+    logger:
+        name: ARXIV
+        mode: both
+        dir: ./log/ARXIV/
+    dataset:
+        dir: ../data/ARXIV/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/ARXIV/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ARXIV/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+BLOG:
+    device: cuda
+    logger:
+        name: BLOG
+        mode: both
+        dir: ./log/BLOG/
+    dataset:
+        dir: ../data/BLOG/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/BLOG/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/BLOG/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+FLICKR:
+    device: cuda
+    logger:
+        name: FLICKR
+        mode: both
+        dir: ./log/FLICKR/
+    dataset:
+        dir: ../data/FLICKR/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/FLICKR/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/FLICKR/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ROMAN:
+    device: cuda
+    logger:
+        name: ROMAN
+        mode: both
+        dir: ./log/ROMAN/
+    dataset:
+        dir: ../data/ROMAN/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/ROMAN/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ROMAN/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+USPS_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/USPS_3/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+HHAR_3:
+    device: cuda
+    logger:
+        name: HHAR_3
+        mode: both
+        dir: ./log/HHAR_3/
+    dataset:
+        dir: ../data/HHAR/
+        augmentation:
+            add_self_loops: true
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+            dense_adj: true
+            t: 2
+    model:
+        dims: [ 256, 16 ]
+    train:
+        pretrain:
+            seed: -1
+            rounds: 1
+            dir: ./pretrain/HHAR_3/
+            max_epoch: 30
+            lr: 1e-3
+            weight_decay: 5e-3
+        seed: -1
+        rounds: 10
+        max_epoch: 100
+        lr: 1e-3
+        weight_decay: 5e-3
+        gamma: 10
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/HHAR_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
