--- a/examples/pipelines/magi/config.yaml
+++ b/examples/pipelines/magi/config.yaml
@@ -1,3 +1,50 @@
+WIKI:
+    device: cuda
+    logger:
+        name: WIKI
+        mode: both
+        dir: ./log/WIKI/
+    dataset:
+        dir: ../data/WIKI/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [512, 512]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/WIKI/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
 CORA:
     device: cuda
     logger:
@@ -23,19 +70,207 @@ CORA:
         ns: 0.5
     train:
         seed: -1
-        rounds: 1
-        max_epoch: 1
+        rounds: 100
+        max_epoch: 400
         lr: 5e-4
         weight_decay: 1e-3
     visualize:
         tsne: true
-        umap: false
-        heatmap: false
+        umap: true
+        heatmap: true
         loss: true
         dir: ./visualization/CORA/
         when: end
     evaluate:
-        each: true
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ACM:
+    device: cuda
+    logger:
+        name: ACM
+        mode: both
+        dir: ./log/ACM/
+    dataset:
+        dir: ../data/ACM/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [512, 512]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 100
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ACM/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+CITE:
+    device: cuda
+    logger:
+        name: CITE
+        mode: both
+        dir: ./log/CITE/
+    dataset:
+        dir: ../data/CITE/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [512, 512]
+            projection:
+        dropout: 0.5
+        tau: 0.9
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 100
+        max_epoch: 400
+        lr: 1e-4
+        weight_decay: 5e-4
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/CITE/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+DBLP:
+    device: cuda
+    logger:
+        name: DBLP
+        mode: both
+        dir: ./log/DBLP/
+    dataset:
+        dir: ../data/DBLP/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [256, 256]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/DBLP/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+PUBMED:
+    device: cuda
+    logger:
+        name: PUBMED
+        mode: both
+        dir: ./log/PUBMED/
+    dataset:
+        dir: ../data/PUBMED/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [256, 256]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/PUBMED/
+        when: end
+    evaluate:
+        each: false
         acc: true
         nmi: true
         ari: true
@@ -48,7 +283,7 @@ CORA:
 ARXIV:
     device: cuda
     logger:
-        name: CORA
+        name: ARXIV
         mode: both
         dir: ./log/ARXIV/
     dataset:
@@ -71,23 +306,258 @@ ARXIV:
         ns: 0.1
     train:
         seed: -1
-        rounds: 1
-        max_epoch: 1
+        rounds: 100
+        max_epoch: 400
         batchsize: 2048
-        lr: 5e-4
+        lr: 1e-2
         weight_decay: 0
         kmeans:
             device: cuda
             batch: -1
     visualize:
         tsne: true
-        umap: false
-        heatmap: false
+        umap: true
+        heatmap: true
         loss: true
         dir: ./visualization/ARXIV/
         when: end
     evaluate:
-        each: true
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+BLOG:
+    device: cuda
+    logger:
+        name: BLOG
+        mode: both
+        dir: ./log/BLOG/
+    dataset:
+        dir: ../data/BLOG/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [512, 512]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/BLOG/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+FLICKR:
+    device: cuda
+    logger:
+        name: FLICKR
+        mode: both
+        dir: ./log/FLICKR/
+    dataset:
+        dir: ../data/FLICKR/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [512, 512]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/FLICKR/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+ROMAN:
+    device: cuda
+    logger:
+        name: ROMAN
+        mode: both
+        dir: ./log/ROMAN/
+    dataset:
+        dir: ../data/ROMAN/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [256, 256]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/ROMAN/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+USPS_3:
+    device: cuda
+    logger:
+        name: USPS_3
+        mode: both
+        dir: ./log/USPS_3/
+    dataset:
+        dir: ../data/USPS/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [256, 256]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/USPS_3/
+        when: end
+    evaluate:
+        each: false
+        acc: true
+        nmi: true
+        ari: true
+        f1: true
+        hom: true
+        com: true
+        pur: true
+        sc: true
+        gre: true
+HHAR_3:
+    device: cuda
+    logger:
+        name: HHAR_3
+        mode: both
+        dir: ./log/HHAR_3/
+    dataset:
+        dir: ../data/HHAR/
+        augmentation:
+            add_self_loops: false
+            drop_edge: 0.0
+            drop_feature: 0.0
+            add_edge: 0.0
+            add_noise: 0.0
+        wt: 100
+        wl: 3
+    model:
+        dims:
+            encoder: [256, 256]
+            projection:
+        dropout: 0.5
+        tau: 0.5
+        ns: 0.5
+    train:
+        seed: -1
+        rounds: 10
+        max_epoch: 400
+        lr: 5e-4
+        weight_decay: 1e-3
+    visualize:
+        tsne: true
+        umap: true
+        heatmap: true
+        loss: true
+        dir: ./visualization/HHAR_3/
+        when: end
+    evaluate:
+        each: false
         acc: true
         nmi: true
         ari: true
